--- a/package.json
+++ b/package.json
@@ -11,6 +11,11 @@
   "dependencies": {
     "@expo-google-fonts/dm-sans": "^0.2.0",
     "@expo-google-fonts/dm-serif-display": "^0.2.0",
+    "@react-native-async-storage/async-storage": "~1.15.0",
+    "@react-native-firebase/app": "^14.1.0",
+    "@react-native-firebase/auth": "^14.1.0",
+    "@react-native-firebase/firestore": "^14.1.0",
+    "@react-native-firebase/storage": "^14.1.0",
     "expo": "~44.0.2",
     "expo-app-loading": "~1.3.0",
     "expo-linear-gradient": "~11.0.0",
@@ -19,6 +24,8 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-gesture-handler": "~2.1.0",
+    "react-native-iphone-x-helper": "^1.3.1",
     "react-native-web": "0.17.1",
     "styled-components": "^5.3.3"
   },
